--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ autopep8 = "^1.5"
 black = "^19.10b0"
 pylint-django = "^2.0.14"
 pylint = "^2.4.4"
+django-role-permissions = "^2.2.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
